# fix

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: push-feature-branch.yml  push-main-branch.yml
model/core/: Cargo.toml
model/core/benches/: 01_number_2_str.rs  02_message_index.rs  02_message_str.rs
model/core/src/: lib.rs  macros.rs  prelude.rs
model/core/src/error/: mod.rs
model/core/src/field/: mod.rs
model/core/src/parser/: mod.rs
model/core/src/parser/ser/: heap.rs  mod.rs  types.rs
model/core/src/schema/: mod.rs
model/core/src/serdes/: des.rs  mod.rs
model/core/src/serdes/ser/: ascii.rs  heap.rs  mod.rs  types.rs
model/core/src/types/: asciichar.rs  asciistr.rs  asciistring.rs  dat.rs  dat_codec.rs  data.rs  display.rs  fixerr.rs  fixmsgtype.rs  fixstr.rs  fixstring.rs  fixtag.rs  mod.rs
model/core/src/utils/: mod.rs
model/generator/: Cargo.toml
model/generator/resources/: FIX-4.4.xml  LICENSE  build.rs  lib.rs
model/generator/src/: lib.rs  macros.rs  prelude.rs
model/generator/src/schema/: mod.rs
model/generator/src/schema/quickfix/: mod.rs
model/generator/src/schema/quickfix/model/: component_def.rs  field_def.rs  header_trailer_def.rs  message_def.rs  mod.rs  refs.rs  repgroup_def.rs  root.rs
model/generator/src/schema/rust/: field_macros.rs  fields.rs  macros.rs  message.rs  mod.rs
model/generator/src/schema/rust/model/: field.rs  index.rs  message.rs  message_member.rs  mod.rs  repeating_group.rs  root.rs  schema.rs
model/generator/src/unittest/: mod.rs
model/generator/tests/: field_macros_test.rs  quick_fix_model_generator_test.rs
model/test/: Cargo.toml
model/test/src/unittest/: mod.rs
model/test/tests/: macros_test.rs  quickfix_test.rs  scratch_pad_test.rs
model/v42/: Cargo.toml
model/v42/resources/: FIX-4.2.xml
model/v42/tests/: smoke_test.rs
model/v44/: Cargo.toml  build.rs
model/v44/examples/: logon_example.rs  model_example.rs
model/v44/resources/: FIX-4.4.xml
model/v44/src/: lib.rs
model/v44/tests/: smoke_test.rs
readme/: packaging_and_deploying.md
serde/: Cargo.toml
serde/src/: expanded.rs  lib.rs  macros.rs  prelude.rs
serde/src/de/: deserializer.rs  enums.rs  enums_deserializer.rs  macros.rs  map.rs  mod.rs  read.rs  rep_grp_deserializer.rs  tag_section_deserializer.rs
serde/src/error/: mod.rs
serde/src/frameing/: mod.rs
serde/src/framing/: decode.rs  enchode.rs  mod.rs  recv.rs  send.rs
serde/src/ser/: macros.rs  mod.rs  serializer.rs  write.rs
serde/src/types/: fixstr.rs  fixstring.rs  fixtag.rs  mod.rs
serde/src/unittest/: mod.rs
serde/tests/: fix_framing_test.rs  fix_serde_bindata_test.rs  fix_serde_field_macros_test.rs  fix_serde_greedy_test.rs  fix_serde_lazy_vs_greedy_test.rs  fix_serde_numeric_test.rs  fix_serde_repgrp_test.rs  fix_serde_strings_test.rs  fix_serde_test.rs
