[workspace]
members = [
    # "model/core", "model/generator", "model/test", 
    "serde"
    ]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
version = "0.1.0"
authors = ["Softstream <softstream.link@gmail.com>"]
readme = "readme.md"
license-file = "LICENSE"
edition = "2021"
rust-version = "1.75"
# repository = "https://github.com/softstream-link/links" # TODO fix the link
keywords = ["network"]
categories = ["network-programming"]


[workspace.dependencies]
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = { version = "1.0" }
quick-xml = { version = "0.31.0", features = ["serialize"] }

bytes = { version = "1.5" }

fix_model_test = { path = "model/test" }
fix_model_generator = { path = "model/generator" }
fix_model_core = { path = "model/core" }
fix_serde = { path = "serde" }

# logging
log = { version = "0.4" }
env_logger = { version = "0.11" }
colored = { version = "2.0" }

# testing
trybuild = { version = "1.0", features = ["diff"] }

# utils
lazy_static = { version = "1.4" }

# benchmarking
criterion = { version = "0.5" }


