[package]
name = "fix_model_core"
version.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
base64 = { workspace = true }
itoa = { workspace = true }

[dev-dependencies]
fix_model_test = { workspace = true }
log = { workspace = true }