[package]
name = "fix_model_core"
version.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true, optional = true }
colored = { workspace = true, optional = true }

[dev-dependencies]
fix_model_generator = { workspace = true }
serde = { workspace = true }
fix_model_test = { workspace = true }
criterion = { workspace = true }

[features]
default = []
full = ["unittest"]
unittest = ["dep:env_logger", "dep:colored"]

[[bench]]
name = "01_number_2_str"
harness = false


[[bench]]
name = "02_message_index"
harness = false
required-features = ["unittest"]

[[bench]]
name = "02_message_str"
harness = false
required-features = ["unittest"]


