[package]
name = "fix_model_generator"
version.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
quick-xml = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
convert_case = { workspace = true }

log = { workspace = true }


[dev-dependencies]
# logging
fix_model_test = { workspace = true }
fix_model_core = { workspace = true }
itoa = { workspace = true }
env_logger = { workspace = true }
colored = { workspace = true }

# utils
