[package]
name = "fix_model_v44"
version.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fix_model_generator = { workspace = true } # provides macros to generate FIX fields & message structs
fix_model_core = { workspace = true }      # provides core types & traits used when generating FIX fields & message structs
serde = { workspace = true }
base64 = { workspace = true } 

[build-dependencies]
fix_model_generator = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
fix_serde = { workspace = true }
fix_model_test = { workspace = true }
log = { workspace = true }
